PyMaker/datas/object2/RawHTML/i11201/Python_DOC_referPages.trouble-installing-spacy-english-model-in-python-2-7-and-upgrading-python-to-3.txt
<div class="post-text" itemprop="text">
<p>I am trying to install the spaCy english model on my mac after installing the program. Right now my machine has python 2.7. I have installed spaCy in the venv then followed that with "python -m spacy.en.download" to install the model as instructed on the website. When I try to do that I get the following in response:</p>
<pre>
$ python -m spacy.en.download
</pre>
<p>Traceback (most recent call last):</p>
<pre>
  File "/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "/System/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/runpy.py", line 72, in _run_code
    exec code in run_globals
  File "/Users/katietemrowsky/Documents/Desktop/machine/.env/lib/python2.7/site-packages/spacy/en/download.py", line 1, in 
    import plac
  File "/Users/katietemrowsky/Documents/Desktop/machine/.env/lib/python2.7/site-packages/plac.py", line 38, in 
    from plac_tk import TkMonitor
  File "/Users/katietemrowsky/Documents/Desktop/machine/.env/lib/python2.7/site-packages/plac_tk.py", line 46
    print('Process %d killed by CTRL-C' % os.getpid(), file=sys.stderr)
                                                           ^
SyntaxError: invalid syntax
</pre>
<p>I then tried to install spaCy and the model on my computer outside of the venv which I would rather not do, but wanted to see if it would work. Again I got the same error. </p>
<p>Additionally I am wondering if the issue has something to do with running python 2.7? I upgraded my python on my computer to 3.5 but am not sure how to replace 2.7 with 3.5? Right now I can run both on the interpreter using <code>$ python</code> or <code>$ python3</code>. How can I upgrade everything to 3.5?</p>
<p>Thank you in advance!</p>
</div>
<div class="post-text" itemprop="text">
<p><strong>In short:</strong></p>
<p>The latest version of <code>spacy</code> and <code>plac</code> doesn't have this issue anymore.</p>
<p>Upgrade your <code>spacy</code> version, it should automatically upgrade <code>plac</code> too:</p>
<pre><code>pip install -U spacy
</code></pre>
<p><strong>In long:</strong></p>
<p>In the latest version of <code>spacy</code>, the <code>import plac</code> line is no longer in the <a href="https://github.com/explosion/spaCy/blob/master/spacy/en/download.py" rel="nofollow noreferrer"><code>spacy.en.download.py</code></a> but the <a href="https://github.com/explosion/spaCy/search?utf8=%E2%9C%93&amp;q=import+plac&amp;type=" rel="nofollow noreferrer"><code>plac</code> library is used in other places</a></p>
<p><a href="https://pypi.python.org/pypi/plac" rel="nofollow noreferrer"><code>plac</code></a> is an argument parser like the native <a href="https://docs.python.org/3/library/argparse.html" rel="nofollow noreferrer"><code>argparse</code></a> or the popular <a href="http://docopt.org/" rel="nofollow noreferrer"><code>docopt</code></a>.</p>
<pre><code>  File "/Users/katietemrowsky/Documents/Desktop/machine/.env/lib/python2.7/site-packages/plac_tk.py", line 46
    print('Process %d killed by CTRL-C' % os.getpid(), file=sys.stderr)
                                                           ^
SyntaxError: invalid syntax
</code></pre>
<p>The error you've occurred above is caused by the difference between the <code>print_function</code> syntax of Python2 and Python3, i.e.:</p>
<pre><code>alvas@ubi:~$ python
Python 2.7.12 (default, Nov 19 2016, 06:48:10) 
[GCC 5.4.0 20160609] on linux2
Type "help", "copyright", "credits" or "license" for more information.
&gt;&gt;&gt; import sys
&gt;&gt;&gt; print('foo bar', file=sys.stderr)
  File "&lt;stdin&gt;", line 1
    print('foo bar', file=sys.stderr)
                         ^
SyntaxError: invalid syntax
&gt;&gt;&gt; exit()
alvas@ubi:~$ python3
Python 3.5.2 (default, Nov 17 2016, 17:05:23) 
[GCC 5.4.0 20160609] on linux
Type "help", "copyright", "credits" or "license" for more information.
&gt;&gt;&gt; import sys
&gt;&gt;&gt; print('foo bar', file=sys.stderr)
foo bar
</code></pre>
<p>And this was introduced by this <a href="https://github.com/micheles/plac/commit/46d8d393fbca8820e5cba5d1da808b65a1c879a3#diff-a008bead586cdc7e3f6e74832de8dde8" rel="nofollow noreferrer">commit</a>.</p>
<p>Since there is the <code>from __future__ import print_function</code> at <a href="https://github.com/micheles/plac/blob/46d8d393fbca8820e5cba5d1da808b65a1c879a3/plac_tk.py#L1" rel="nofollow noreferrer">https://github.com/micheles/plac/blob/46d8d393fbca8820e5cba5d1da808b65a1c879a3/plac_tk.py#L1</a> </p>
<p>The <code>print_function</code> should have kicked in and allow the <code>file=</code> parameters in the print for Python2, e.g.</p>
<pre><code>alvas@ubi:~$ python2
Python 2.7.12 (default, Nov 19 2016, 06:48:10) 
[GCC 5.4.0 20160609] on linux2
Type "help", "copyright", "credits" or "license" for more information.
&gt;&gt;&gt; from __future__ import print_function
&gt;&gt;&gt; import sys
&gt;&gt;&gt; print('foo bar', file=sys.stderr)
foo bar
</code></pre>
<p>But the <code>__future__</code> import from <code>plac</code> didn't kick in and that remains a mystery to me =( But that's another answer for another question at another time...</p>
</div>
<span class="comment-copy">It looks like TKMonitor has python 3.x code in their 2.7 I just ran into this bug too. I ended up modifying the local file to just say <code>print &gt;&gt; sys.stderr, 'Process %d killed by CTRL-C' % os.getpid()</code> for now to get it working but I can't push the code anywhere because the downloaded one breaks</span>
<span class="comment-copy">Looks like they fixed it, change your plac to 0.9.4 in requirements.txt</span>
